# toronto-osm-washroom-import

./: .gitignore  README.md  draft_import_plan.wiki  generate-imports.py  pyproject.toml
documentation/: draft_forum_post.md  draft_import_plan.wiki  query_all_toronto_toilets.txt
resources/: torontoopendata.py
source_data/: current_washrooms.geojson  current_washrooms.json  pfr_facilities.geojson  pfr_facilities_meta.geojson  pfr_facilities_meta.json  pfr_to_import.geojson  pfr_washrooms.geojson  pfr_washrooms_meta.geojson  pfr_washrooms_meta.json
source_data/2024-09-01/: current_washrooms.geojson  current_washrooms.json  pfr_facilities.geojson  pfr_washrooms.geojson
source_data/2024-09-20/: current_washrooms.geojson  current_washrooms.json  pfr_facilities.geojson  pfr_facilities_meta.json  pfr_washrooms.geojson  pfr_washrooms_meta.json
src/: diff_data.py  generate_imports.py
src/resources/: openstreetmap.py  toronto_encoding_issues.py
to_import/: pfr_status_0_to_review.geojson  pfr_status_2_to_review.geojson  pfr_to_import.geojson  script_summary.txt
to_import/2024-09-01/: pfr_status_2_to_review.geojson  pfr_to_import.geojson
to_import/2024-09-20/: main_import_changes.txt  pfr_status_2_to_review.geojson  pfr_to_import.geojson  status_two_changes.txt
to_import/by_ward/Beaches-East York (19)/: Beaches-East York (19)_buildings_query.txt  Beaches-East York (19)_changeset_tags.txt  Beaches-East York (19)_toilets_query.txt  Beaches-East York (19)_washrooms.geojson
to_import/test_examples/: Don Valley West (15).osm  Toronto Danforth (14).osm
(+169 files in other folders)
