[tool.poetry]
name = "toronto-osm-washroom-import"
version = "0.1.0"
description = "Analysis and prep files for importing City of Toronto washrooms into OpenStreetMap"
authors = ["Ben Coleman"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^1.0.1"
pandas = "^2.2.2"
numpy = "^2.0.0"
requests = "^2.32.3"
pandera = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
